expanded model support, e2e
